
[package]
name = "ms-similarity-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
mzdata = "0.22"
ndarray = "0.15"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
