[package]
name = "PASS-CLI"
version = "1.2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
csv = "1.3.1"
flate2 = "1.1.2"
glob = "0.3.2"
hashbrown = "0.15.4"
mzdata = "0.54.0"
ndarray = "0.16.1"
quick-xml = "0.29"
rayon = "1.10.0"
roxmltree = "0.20.0"
plotters = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
